# homework_31

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py
datasets/: ad.json  category.json  csv_to_json.py  location.csv  location.json  user.csv  user.json
homework_31/: asgi.py  settings.py  urls.py  wsgi.py
info/: urls.py  views.py
selections/: models.py  permissions.py  serializers.py  urls.py  views.py
selections/migrations/: 0001_initial.py  0002_initial.py
tests/: factories.py  fixtures.py
tests/ads/: test_can_create_ad.py  test_can_get_ad.py  test_can_get_ads_list.py
tests/selections/: test_can_create_selection.py
tests/users/: test_get_token.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
